[tool.poetry]
name = "news-grounding-agent"
version = "0.1.0"
description = "Agent Workshop Project"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
google-adk = "^1.4.2"
jupyter = "^1.0.0"
dotenv = "^0.9.9"
litellm = "^1.72.9"
google-generativeai = "^0.8.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"